--- a/src/components/layout/styles.module.css
+++ b/src/components/layout/styles.module.css
@@ -5,6 +5,5 @@
 }
 
 .navLink {
-  @apply flex items-center justify-start lg:justify-center uppercase w-full px-3 py-2 rounded hover:bg-gray-900 hover:text-white focus:outline-none;
-  
+  @apply flex w-full items-center justify-start rounded px-3 py-2 uppercase hover:bg-gray-900 hover:text-white focus:outline-none lg:justify-center;
 }
