--- a/src/components/sections/projects/styles.module.css
+++ b/src/components/sections/projects/styles.module.css
@@ -1,5 +1,5 @@
 .imgContainer {
-  @apply isolation-auto relative;
+  @apply relative isolation-auto;
   aspect-ratio: 5 / 6;
 }
 
@@ -7,5 +7,4 @@
   .imgContainer {
     display: none;
   }
-
 }
