--- a/src/components/tooltip/styles.module.css
+++ b/src/components/tooltip/styles.module.css
@@ -41,7 +41,9 @@
 
   opacity: 0;
   transform: translateX(var(--_x, 0)) translateY(var(--_y, 0));
-  transition: opacity 0.2s ease, transform 0.2s ease;
+  transition:
+    opacity 0.2s ease,
+    transform 0.2s ease;
 
   position: absolute;
   z-index: 1;
