--- a/src/root.css
+++ b/src/root.css
@@ -12,65 +12,65 @@
 }
 
 @font-face {
-  font-family: "Geist Sans";
-  src: url("node_modules/geist/dist/fonts/geist-sans/Geist-Regular.woff2")
-    format("woff2");
+  font-style: normal;
   font-weight: 400;
-  font-style: normal;
+  src: url("../node_modules/geist/dist/fonts/geist-sans/Geist-Regular.woff2")
+    format("woff2");
+  font-family: "Geist Sans";
 }
 
 @font-face {
-  font-family: "Geist Sans";
-  src: url("node_modules/geist/dist/fonts/geist-sans/Geist-Medium.woff2")
-    format("woff2");
+  font-style: normal;
   font-weight: 500;
-  font-style: normal;
+  src: url("../node_modules/geist/dist/fonts/geist-sans/Geist-Medium.woff2")
+    format("woff2");
+  font-family: "Geist Sans";
 }
 
 @font-face {
-  font-family: "Geist Sans";
-  src: url("node_modules/geist/dist/fonts/geist-sans/Geist-SemiBold.woff2")
-    format("woff2");
+  font-style: normal;
   font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
+  src: url("../node_modules/geist/dist/fonts/geist-sans/Geist-SemiBold.woff2")
+    format("woff2");
   font-family: "Geist Sans";
-  src: url("node_modules/geist/dist/fonts/geist-sans/Geist-Bold.woff2")
-    format("woff2");
-  font-weight: 700;
-  font-style: normal;
 }
 
 @font-face {
-  font-family: "Geist Mono";
-  src: url("node_modules/geist/dist/fonts/geist-mono/GeistMono-Regular.woff2")
+  font-style: normal;
+  font-weight: 700;
+  src: url("../node_modules/geist/dist/fonts/geist-sans/Geist-Bold.woff2")
     format("woff2");
+  font-family: "Geist Sans";
+}
+
+@font-face {
+  font-style: normal;
   font-weight: 400;
-  font-style: normal;
+  src: url("../node_modules/geist/dist/fonts/geist-mono/GeistMono-Regular.woff2")
+    format("woff2");
+  font-family: "Geist Mono";
 }
 
 @font-face {
-  font-family: "Geist Mono";
-  src: url("node_modules/geist/dist/fonts/geist-mono/GeistMono-Medium.woff2")
-    format("woff2");
+  font-style: normal;
   font-weight: 500;
-  font-style: normal;
+  src: url("../node_modules/geist/dist/fonts/geist-mono/GeistMono-Medium.woff2")
+    format("woff2");
+  font-family: "Geist Mono";
 }
 
 @font-face {
-  font-family: "Geist Mono";
-  src: url("node_modules/geist/dist/fonts/geist-mono/GeistMono-SemiBold.woff2")
-    format("woff2");
+  font-style: normal;
   font-weight: 600;
-  font-style: normal;
+  src: url("../node_modules/geist/dist/fonts/geist-mono/GeistMono-SemiBold.woff2")
+    format("woff2");
+  font-family: "Geist Mono";
 }
 
 @font-face {
-  font-family: "Geist Mono";
-  src: url("node_modules/geist/dist/fonts/geist-mono/GeistMono-Bold.woff2")
-    format("woff2");
-  font-weight: 700;
   font-style: normal;
+  font-weight: 700;
+  src: url("../node_modules/geist/dist/fonts/geist-mono/GeistMono-Bold.woff2")
+    format("woff2");
+  font-family: "Geist Mono";
 }
