--- a/src/components/sections/skills/styles.module.css
+++ b/src/components/sections/skills/styles.module.css
@@ -1,9 +1,8 @@
 .iconWrapper svg {
-  @apply transform fill-current transition duration-300 ease-in-out;
   fill: currentColor;
-  transition-duration: theme(transitionDuration.300);
+  transition-duration: 300ms;
   transition-property: color;
-  transition-timing-function: theme(transitionTimingFunction.in-out);
+  transition-timing-function: var(--transition-timing-function-in-out);
 }
 
 .iconWrapper path {
